--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,20 +40,29 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  margin: 0.6em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #646cff;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #ffffff;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+
+
+
+footer {
+  padding: 50px 20px;
+}
+
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -67,3 +76,6 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+
